@@ -38,6 +38,7 @@ limitations under the License.
 |------|--------|---------|
 | <a name="module_delta_critical"></a> [delta\_critical](#module\_delta\_critical) | ../slurm_destroy_nodes | n/a |
 | <a name="module_delta_instance_template"></a> [delta\_instance\_template](#module\_delta\_instance\_template) | ../slurm_destroy_nodes | n/a |
+| <a name="module_delta_placement_groups"></a> [delta\_placement\_groups](#module\_delta\_placement\_groups) | ../slurm_destroy_resource_policies | n/a |
 | <a name="module_slurm_compute_template"></a> [slurm\_compute\_template](#module\_slurm\_compute\_template) | ../slurm_instance_template | n/a |
 
 ## Resources
